(library
 (name beluga)
 (modules :standard)
 (libraries gen camlp-streams sedlex extlib support unix str)
 (instrumentation
  (backend bisect_ppx --bisect-silent yes))
 (preprocess
  (pps sedlex.ppx)))

(env
 (dev
  (flags
   (:standard
    -w
    +A-z-e-p-32-42-44-48-50-58-69-70
    -warn-error
    +A-p-37-48-50-60))))
